{{$NEXT}}

0.0996    2014-03-22 21:12:29 America/Los_Angeles

      [BUG FIXES]

      - Added a workaround for Net::LibIDN, which was not being properly
      indexed.  If you experienced this problem, just `pull Net::LibIDN`
      to correct it.  This fixed GH #149.  Thanks @perlpunk and @malbin.

0.0995    2014-03-18 21:12:56 America/Los_Angeles

      [INCOMPATIBLE CHANGES]

      - The argument for the "init" command is now the repository root
      instead of the stack name.  This makes the interface more convenient
      and more familiar to git users.  You can still specify the root
      using the global --root option if you like.  And the initial stack
      name can be set with the --stack option.

      [NEW COMMANDS]

      - All the new command listed below are experimental.  The interface and
      behavior is subject to change.  See the POD in each command for details.

      - The "update" command pulls the latest version of packages.  You can
      ask to update all packages or just specific ones.

      - The "merge" command joins the history of two stacks together.  At the
      moment, it is only capable of fast-forward merges.

      - The "reset" command moves the head of the stack to a prior revision,
      thereby discarding all subsequent revisions.

      - The "revert" command creates a new revision that matches the state at
      a prior revision.

      [ENHANCEMENTS]

      - The index file for each stack now contains artificial records for
      each module that is included in the target version of perl.  This
      allows installers to cope with requests to install core modules,
      which normally aren't present in a Pinto repository.  If you pull
      a dual-life module, it will mask the artifical records.  The
      artifical records never appear in a stack diff or listing.

      NOTE: This change will take effect the next time you perform
      any command that modifies the state of the stack.

      [BUG FIXES]
