@@ -55,13 +55,16 @@ sub BUILD {
 sub execute {
     my ($self) = @_;
 
+    my $stack = $self->stack;
+
     for my $target ( $self->targets ) {
 
         try {
             $self->repo->svp_begin;
-            $self->notice( "Pulling target $target to stack " . $self->stack );
-            my $dist = $self->pull( target => $target );
-            push @{$self->affected}, $dist if $dist;
+            $self->notice( "Pulling target $target to stack $stack");
+            my ($dist, $did_pull, $did_pull_prereqs) = $self->pull( target => $target );
+            $self->warning("Target $target is already on stack $stack") unless $did_pull;
+            push @{$self->affected}, $dist if $did_pull || $did_pull_prereqs;
         }
         catch {
             throw $_ unless $self->no_fail;
