@@ -72,6 +72,9 @@ sub pull {
 
     my $target = $args{target};
     my $stack  = $self->stack;
+
+    my $did_register         = 0;
+    my $did_register_prereqs = 0;
     my $dist;
 
     if ( $target->isa('Pinto::Schema::Result::Distribution') ) {
@@ -85,7 +88,7 @@ sub pull {
         my $tpv = $stack->target_perl_version;
         if ( $target->is_core( in => $tpv ) ) {
             $self->warning("Skipping $target: included in perl $tpv core");
-            return;
+            return (undef, 0, 0); # Nothing was pulled
         }
 
         $dist = $self->find( target => $target );
@@ -94,10 +97,10 @@ sub pull {
         throw "Illeagal arguments";
     }
 
-    $dist->register( stack => $stack, pin => $self->pin );
-    $self->do_recursion( start => $dist ) if $self->recurse;
+    $did_register = $dist->register( stack => $stack, pin => $self->pin );
+    $did_register_prereqs = $self->do_recursion( start => $dist ) if $self->recurse;
 
-    return $dist;
+    return ($dist, $did_register, $did_register_prereqs);
 }
 
 #-----------------------------------------------------------------------------
@@ -143,6 +146,8 @@ sub do_recursion {
     my $stack = $self->stack;
 
     my %last_seen;
+    my $did_register = 0;
+
     my $cb = sub {
         my ($prereq) = @_;
 
@@ -156,7 +161,7 @@ sub do_recursion {
 
         return if not my $dist = $self->find( target => $target );
 
-        $dist->register( stack => $stack );
+        $did_register += $dist->register( stack => $stack );
 
         # Record the most recent version of the packages that has
         # been registered, so we don't need to find it again.
@@ -179,7 +184,7 @@ sub do_recursion {
 
     while ( $walker->next ) { };    # Just want the callback side effects
 
-    return $self;
+    return $did_register;
 }
 
 #-----------------------------------------------------------------------------
