@@ -1,5 +1,13 @@
 {{$NEXT}}
 
+      [ENHANCEMENTS]
+
+      - When generating the title for the log message, only the targets
+      at the top of the dependency graph are listed, and only if they
+      (or one of their prerequisites) were actually affected by the
+      operation.  In effect, redundant and prereq targets are therefore
+      excluded from the message. This attempts to fix GH #86. Thanks @akarelas.
+
 0.0996    2014-03-22 21:12:29 America/Los_Angeles
 
       [BUG FIXES]
